--- a/CONTRIBUTING.org
+++ b/CONTRIBUTING.org
@@ -65,9 +65,13 @@ We have good quality assurance and an established workflow. This is it:
 4. New Branch in Git
 5. Naming: =(feature|fix|chore)/issue-id/short-description=
 6. Develop / Test locally until tests pass
-   - Please install [[https://prettier.io/][Prettier]] and use it to format your code. This
-     repository includes a ~.prettierrc.json~ with some configuration
-     options that Prettier will use automatically.
+   - We use [[https://github.com/prettier/prettier-eslint][prettier-eslint]] to format code, which combines both
+     ~prettier~ and ~eslint --fix~ for the best of both worlds. This
+     repository includes ~.prettierrc.json~ and ~.eslintrc.yml~ with
+     some configuration options that Prettier will use automatically.
+   - Run ~yarn prettier-eslint --write~ to automatically format the
+     whole codebase, or ~yarn prettier-eslint --list-different~ to see
+     which files don't currently match the repository's style.
    - If you're using Emacs, you can autoformat your source files:
      https://github.com/munen/emacs.d/#auto-formatting
    - Please use ~eslint~ to ensure that your changes conform with
