doc: Update changelog

--- a/changelog.org
+++ b/changelog.org
@@ -4,7 +4,15 @@ All user visible changes to organice will be documented in this file.
 
 When there are updates to the changelog, you will be notified and see a 'gift' icon appear on the top right corner.
 
+* [2020-11-08 Sun]
+
+** Changed
+
 * [2020-11-06 Fri]
+  - Safeguard against selecting text by accident.
+    - Before this change, it was possible to select text when doing a 'swipe'.
+    - Now, selecting/copying text is only possible in 'edit mode', effectively safeguarding against accidentally selecting text.
+    - Thank you [[https://github.com/tarnung][tarnung]] for your [[https://github.com/200ok-ch/organice/pull/557][PR]] 🙏
 
 ** Added
    - Additional themes. You now can choose between:
