--- a/test_helpers/fixtures/all_the_features.org
+++ b/test_helpers/fixtures/all_the_features.org
@@ -20,7 +20,10 @@
 
 # Complex TODO with priority, active timestamp, link to an email and a tag
 **** TODO [#B] <2019-05-02 Thu> Some Person [[mu4e:msgid:CAN6MX5o-i9koRnBXGOFQ-wLUhp82mGCwFSxo0b2i0+TROYNZkg@mail.gmail.com][Re: HÖCHENSCHWAND 05.Februar 2019]] :200ok:
-
+*** Header with =CUSTOM_ID= property
+    :PROPERTIES:
+    :CUSTOM_ID: link_to_me
+    :END:
 *** Planning items
 
 **** TODO I am scheduled
@@ -102,7 +105,7 @@ qui dolorem eum fugiat quo voluptas nulla pariatur?"
    CLOCK: [2019-11-11 Mon 13:12]--[2019-11-12 Tue 13:12] => 24:00
    CLOCK: [2019-10-13 Sun 12:15]--[2019-10-13 Sun 14:12] =>  1:57
    :END:
-** A messy headline with trailing whitespace                    
+** A messy headline with trailing whitespace
 
 organice's parser is build on the premise that it should not produce a
 diff on users Org files. Lets say there's a new user with a big file.
