--- a/sample.org
+++ b/sample.org
@@ -423,7 +423,7 @@ conditions between clients.
 organice supports using multiple files.
 
 default behaviour:
-- When you first open a file it is loaded from the backend. At this point the file is persisted to local storage. It will be loaded from there on future application starts. To ensure consistency, whenever a file is opened from the file browser, it will be synced with the backend.
+- When you first open a file it is loaded from the backend. At this point the file is persisted to local storage. It will be loaded from there on future application starts. To ensure consistency whenever a file is opened it will be synced with the backend.
 - Contents of all loaded files are displayed in the agenda.
 - All loaded files are refile targets.
 - Search only shows results from the currently viewed file.
